syntax = "proto3";

option go_package = "errorpb";

message EvenNumberRequest {
    int32 number=1;
}

message Name {
    string first_name=1;
    string middle_name=2;
    string last_name=3;
}

enum Color{
    UNKNOWN=0;
    RED = 1;
    BLUE = 2;
    YELLOW = 3;
}

message Data {
    Name name=1;
    Color color=2;
}

message SuccessResponse {
    message SuccessInfo {
        string message=1;
        int32 status = 2;
        Data data=3;
    }
    //repeated as data is multiple
    repeated SuccessInfo success_info = 1;
    bool isEven = 2;
}

service DeadlineHandlingService{
    rpc DeadlineHandling(EvenNumberRequest) returns (SuccessResponse);
}